Fixed small gap between reactbuttons and input for iPhone6Plus

--- a/css/style.css
+++ b/css/style.css
@@ -228,10 +228,10 @@ Make them on same line*/
 	}
 
 	table {
-		bottom: 10%;
+		bottom: 9%;
 		margin-left: 0.1%;
 		margin-right: 0.1%;
-		padding-bottom: 10%;
+		padding-bottom: 9%;
 	}
 
 	.counters {
